<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:text="@string/tambah"
        android:layout_height="wrap_content"
        android:id="@+id/tambah"
        android:layout_below="@+id/angka_kedua"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:layout_width="80dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/angka_pertama"
        android:hint="@string/masukkan_angka_pertama"
        android:textSize="14sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/angka_kedua"
        android:hint="@string/masukkan_angka_kedua"
        android:textSize="14sp"
        android:layout_below="@+id/angka_pertama"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:autofillHints="" />


    <TextView
        android:text="@string/masukkan_dua_angka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <TextView
        android:text="@string/nol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hasil"
        android:layout_below="@id/hasil_teks"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hasil_teks"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/bersihkan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <Button
        android:text="@string/kurang"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/kurang"
        android:layout_alignBaseline="@id/tambah"
        android:layout_alignBottom="@id/tambah"
        android:layout_toRightOf="@id/tambah"
        android:layout_toEndOf="@id/tambah"/>

    <Button
        android:text="@string/bersihkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bersihkan"
        android:layout_below="@id/tambah"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/bagi"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/bagi"
        android:layout_above="@id/bersihkan"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="@string/kali"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/kali"
        android:layout_alignBaseline="@id/bagi"
        android:layout_alignBottom="@id/bagi"
        android:layout_toLeftOf="@id/bagi"
        android:layout_toStartOf="@id/bagi"/>


</RelativeLayout>